# fewfox

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/model/: resnet50.yaml
configs/paths/: default.yaml
configs/train/: default.yaml
data/: get_ESC50.sh  get_nigens.sh  mini_esc50.py
notebooks/: data_exploration.ipynb
src/: evaluate.py  plot_embedding_space.py  protopipeline.py
src/datamodules/: _utils.py  esc50.py
src/datamodules/esc50/: embeddings_esc50.py  esc50.py  mini_esc50.py
src/models/: ast.py  ft_vanilla.py  protonet.py  prototypicalnetwork.py
