[tool.poetry]
name = "fewfox"
version = "0.1.0"
description = ""
authors = ["Benjamin Cretois <benjamin.cretois@nina.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
easyfsl = "^1.5.0"
birdnetlib = "^0.18.0"
lightning = "^2.5.0.post0"
hydra-core = "^1.3.2"
llvmlite = "^0.43.0"
librosa = "^0.10.2.post1"
timm = "^1.0.13"
wget = "^3.2"
tflite = "^2.10.0"
resampy = "^0.4.3"
seaborn = "^0.13.2"
keras = "<3.0.0"
tensorflow = "2.15.1"
ml-collections = "^1.0.0"
apache-beam = "^2.62.0"
ml-dtypes = "0.3.2"
jax = "0.4.33"
etils = "1.9.4"
importlib-resources = "6.4.5"
flax = "0.10.0"
tensorflow-hub = "0.16.1"
torchaudio = "2.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
